# TopicsonControl2_2024

./: Hola 2  README.md  pyproject.toml
Exercise5/: Exercise5.m  readme.md
Exercise6/: Exercise6  readme.md
Exercise8/: readme.md
LQR_session/01_Dynamic_model/: readme.md
LQR_session/01_Seesaw_model/: readme.md
LQR_session/02_Animation_MANIM/: readme.md
LQR_session/02_seesaw_LQR/: readme.md  seesaw_LQR.m
LQR_session/03_octave_simulation/: readme.md  seesawDynamics.m
LQR_session/03_seesaw_finite_horizon/: readme.md
LQR_session/04_LQR_control/: System_LQR  readme.md
LQR_session/05_Discrete_FiniteHorizon/: Discrete_Finite_Horizon.m
LQR_session/05_seesaw_LQR_recursive/: 05_seesaw_R_LQR.m  readme.md
LQR_session/extra01_manim/: readme.md  simulacion_manim.ipynb
ejercicio1/: readme.md
exercise1/: exercise1.m  readme.md
exercise2/: exercise2.m  readme.md
exercise3/: exercise3.m
exercise4/: exercise4.m
extra_excercises/Exercise5/: Exercise5.m  readme.md
nonlinearoscillators/: nonlinearforces.md  nonlinearoscillators.py  readme.md
session1/: MSD_animated.m  readme2.txt  ss_example.m  stableunstable.m
session2/: c2d_demo_octave.m  cart_pendulum.m  cart_pendulum_animation.m  phase_diagram.m
session3/: cart_onedim_lyaptest.m  cart_pendulum_lyaptest.m  linearization_over_solution_simplependulum.m  lyapunov_stability.m
session7/: ballandbeam.m  ballandbeamoctave.m  cartpendulum.m  level_control.m  level_control_nbar_place.m  level_control_nointegral.m
session8/: examples.m  lqrback.m  protoMPC.m  recedinghorizon.m
session_6/: msd_fs.m
(+5 files in other folders)
